Issue #301: Add button expand and collapse all data dictionary columns on view page

--- a/html/themes/custom/dc_theme/css/style.css
+++ b/html/themes/custom/dc_theme/css/style.css
@@ -375,6 +375,9 @@ ul.dc-list-inline li:last-child::after, ol.dc-list-inline li:last-child::after {
 .page-node-type-data-set .field--name-field-data-custodian .field__label {
   font-weight: normal;
 }
+.page-node-type-data-set #toggle-button {
+  display: none;
+}
 .page-node-type-data-set .dc-subfooter {
   background: var(--bs-gray-100);
   border-top: 1px solid var(--bs-gray-200);
