--- a/html/themes/custom/dc_theme/scss/_page-node-type-data-set.scss
+++ b/html/themes/custom/dc_theme/scss/_page-node-type-data-set.scss
@@ -92,6 +92,9 @@
 
   }
 
+  #toggle-button {
+    display: none;
+  }
   .dc-subfooter {
     background: var(--bs-gray-100);
     border-top: 1px solid var(--bs-gray-200);
